--- a/SalesDashBoard/src/main/webapp/WEB-INF/web.xml
+++ b/SalesDashBoard/src/main/webapp/WEB-INF/web.xml
@@ -66,5 +66,12 @@
 		<param-name>log4jRefreshInterval</param-name>
 		<param-value>6000</param-value>
 	</context-param>
-	
+	<filter>
+    <filter-name>cors</filter-name>
+    <filter-class>com.synerzip.presales.util.CORSFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>cors</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 </web-app>
